<resources>
    <string name="app_name">Task Manager App</string>
    <string name="task_manager">TASK MANAGER</string>
    <string name="current_tasks">Current tasks:</string>
    <string name="add_task">Add task</string>
    <string name="adding_task">Adding task</string>
    <string name="enter_name_of_the_task">Enter name of the task here…</string>
    <string name="enter_description_here">Enter description here…</string>
    <string name="save_task">Save task</string>
    <string name="go_back">Go back</string>
    <string name="complete_task">Complete task</string>
    <string name="task_review">Task review</string>
</resources>