<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_manager"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adding_task"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/adding_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
        app:layout_constraintStart_toStartOf="@+id/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        android:hint="@string/enter_name_of_the_task"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:id="@+id/adding_description_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/adding_name_field"
        app:layout_constraintTop_toBottomOf="@+id/adding_name_field"
        android:hint="@string/enter_description_here"
        android:layout_marginTop="12dp"
        />

    <Button
        android:id="@+id/save_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/subtitle_text"
        app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/adding_description_field"
        android:text="@string/save_task"
        android:layout_marginTop="12dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>