<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_manager"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        android:text="@string/current_tasks"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/tasks_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/subtitle_text"
        app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        android:layout_marginTop="12dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/add_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/subtitle_text"
        app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/tasks_list"
        android:text="@string/add_task"
        android:layout_marginTop="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>