<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="taskName"
            type="String" />

        <variable
            name="taskDesc"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_manager"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/task_review"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/title_text"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/review_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{taskName}"
            app:layout_constraintStart_toStartOf="@+id/subtitle_text"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
            tools:text="Dog"/>

        <TextView
            android:id="@+id/review_description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@{taskDesc}"
            app:layout_constraintStart_toStartOf="@+id/review_name_field"
            app:layout_constraintTop_toBottomOf="@+id/review_name_field"
            tools:text = "Walk the dog"/>

        <Button
            android:id="@+id/complete_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/complete_task"
            app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
            app:layout_constraintStart_toStartOf="@+id/subtitle_text"
            app:layout_constraintTop_toBottomOf="@+id/review_description_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>